@@ -61,3 +61,12 @@ class ErrorDictionary(ed.ErrorDictionary):
             #            'buildingspy_var': "iIteMis",
             #            'model_message': "Keyword 'each' applied to scalar in '{}'.",
             'summary_message': "Number of models with redeclare of no longer replaceable class  : {}\n"}
+
+        # Search for strings such as
+        # Access to component cor not recommended, it is not present in
+        # constraining type of declaration
+        # 'replaceable Buildings.Examples.VAVReheat.BaseClasses.Floor flo
+        self._error_dict["non-recommended access to component not in constraining type"] = {
+            'tool_message': "it is not present in constraining type of declaration",
+            'counter': 0,
+            'summary_message': "Number of models with access not in constraining type           : {}\n"}
